load(
    "@com_github_mvukov_rules_ros//ros:message_generation.bzl",
    "cc_ros_interface_library",
    "py_ros_interface_library",
    "ros_interface_library",
)

ros_interface_library(
    name = "rosgraph_msgs",
    srcs = glob(["rosgraph_msgs/msg/*.msg"]),
    deps = ["@ros_std_msgs//:std_msgs"],
    visibility = ["//visibility:public"],
)

ros_interface_library(
    name = "std_srvs",
    srcs = glob(["std_srvs/srv/*.srv"]),
    visibility = ["//visibility:public"],
)

cc_ros_interface_library(
    name = "cc_rosgraph_msgs",
    deps = [":rosgraph_msgs"],
    visibility = ["//visibility:public"],
)

cc_ros_interface_library(
    name = "cc_std_srvs",
    deps = [":std_srvs"],
    visibility = ["//visibility:public"],
)

py_ros_interface_library(
    name = "py_rosgraph_msgs",
    deps = [":rosgraph_msgs"],
    visibility = ["//visibility:public"],
)

py_ros_interface_library(
    name = "py_std_srvs",
    deps = [":std_srvs"],
    visibility = ["//visibility:public"],
)
