load("@com_github_mvukov_rules_ros//ros:cc_defs.bzl", "cc_ros_library")
load("@rules_cc//cc:defs.bzl", "cc_library")

config_setting(
    name = "linux_x86_64",
    values = {"cpu": "k8"},
    visibility = ["//visibility:public"],
)
cc_library(
    name = "python310_lib",
    srcs = ["@python310_x86_64-unknown-linux-gnu//:lib/libpython3.so"],
    hdrs = ["@python310_x86_64-unknown-linux-gnu//:includes"],
    includes = [
        "external/python310_x86_64-unknown-linux-gnu/include/python3.10/",
    ],
    visibility = ["//visibility:public"]
)

cc_ros_library(
    name = "rospack",
    srcs = [
        "src/rospack.cpp",
        "src/rospack_cmdline.cpp",
        "src/utils.cpp",
        "src/rospack_backcompat.cpp",
        
    ],
    hdrs = glob(["include/rospack/*.h", "src/*.h"]),
    copts = [
        "-Iexternal/python310_x86_64-unknown-linux-gnu/include/python3.10/"
    ],
    linkopts=[
        "-lpython3.10",
    ],
    includes = ["include", "include/python3.10"],
    visibility = ["//visibility:public"],
    deps = [
        ":python310_lib",
        "@boost//:unordered",
        "@boost//:program_options",
        "@boost//:thread",
        "@boost//:filesystem",
        "@console_bridge",
        "@tinyxml2//:tinyxml2",
    ],
)
