""" Builds tinyxml.
"""

cc_library(
    name = "tinyxml",
    hdrs = [
        "tinyxml/tinystr.h",
        "tinyxml/tinyxml.h",
    ],
    includes = ["tinyxml"],
    defines = ["TIXML_USE_STL"],
    srcs = [
        "tinyxml/tinystr.cpp",
        "tinyxml/tinyxml.cpp",
        "tinyxml/tinyxmlerror.cpp",
        "tinyxml/tinyxmlparser.cpp",
    ],
    visibility = ["//visibility:public"],
)
