load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_python//python:defs.bzl", "py_binary")

exports_files([
    "cc_defs.bzl",
    "dynamic_reconfigure.bzl",
    "interfaces.bzl",
    "launch.bzl",
    "launch.py.tpl",
    "test.bzl",
    "test.py.tpl",
    "topic.bzl",
    "utils.bzl",
])

py_binary(
    name = "parameter_generator_app",
    srcs = ["parameter_generator_app.py"],
    main = "parameter_generator_app.py",
    visibility = ["//visibility:public"],
    deps = ["@com_github_mvukov_rules_ros//:dynamic_reconfigure"],
)

bzl_library(
    name = "cc_defs",
    srcs = [
        "cc_defs.bzl",
        "@rules_cc//cc:srcs",
    ],
    visibility = ["//docs:__pkg__"],
)

filegroup(
    name = "python_defs",
    srcs = [
        "@bazel_tools//tools/python:private/defs.bzl",
        "@bazel_tools//tools/python:srcs_version.bzl",
        "@bazel_tools//tools/python:toolchain.bzl",
        "@bazel_tools//tools/python:utils.bzl",
        "@rules_python//python:bzl",
    ],
)

bzl_library(
    name = "interfaces",
    srcs = [
        "interfaces.bzl",
        "utils.bzl",
        ":python_defs",
        "@rules_cc//cc:srcs",
    ],
    deps = [
        "@bazel_skylib//lib:paths",
    ],
    visibility = ["//docs:__pkg__"],
)

bzl_library(
    name = "launch",
    srcs = [
        "launch.bzl",
        ":python_defs",
        "//third_party:expand_template.bzl",
    ],
    visibility = ["//docs:__pkg__"],
)

bzl_library(
    name = "test",
    srcs = [
        "test.bzl",
        ":python_defs",
        "//third_party:expand_template.bzl",
    ],
    visibility = ["//docs:__pkg__"],
)

bzl_library(
    name = "topic",
    srcs = [
        "topic.bzl",
        ":python_defs",
    ],
    deps = [
        ":interfaces",
    ],
    visibility = ["//docs:__pkg__"],
)
