"""Implements an example to demonstrate simple actionlib client-server
interaction.
"""

load("//ros:cc_defs.bzl", "cc_ros_binary")
load("//ros:launch.bzl", "ros_launch")
load(
    "//ros:interfaces.bzl",
    "cc_ros_interface_library",
    "ros_interface_library",
)

ros_interface_library(
    name = "dishwasher_actions",
    srcs = ["DoDishes.action"],
    deps = [
        "@ros_common_msgs//:actionlib_msgs",  # Must be explicitly defined!
    ],
)

cc_ros_interface_library(
    name = "cc_dishwasher_actions",
    deps = [":dishwasher_actions"],
)

cc_ros_binary(
    name = "server",
    srcs = ["server.cc"],
    deps = [
        ":cc_dishwasher_actions",
        "@ros_actionlib//:actionlib",
    ],
)

cc_ros_binary(
    name = "client",
    srcs = ["client.cc"],
    deps = [
        ":cc_dishwasher_actions",
        "@ros_actionlib//:actionlib",
    ],
)

ros_launch(
    name = "dishwasher",
    launch_files = [":dishwasher.launch"],
    nodes = [
        ":client",
        ":server",
    ],
)
